<resources>
    <string name="app_name">СКУД</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="strelka">Back</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="addLock">Добавить замок</string>
    <string name="locks_list_of_locks">Список текущих замков</string>
    <string name="locks_lock_managering">Управление замками</string>
    <string name="locks">Замки</string>
    <string name="main_lock_id">ID замка</string>
    <string name="main_description">Описание</string>
    <string name="main_version">Версия</string>
    <string name="add_user_adding_user">Добавление пользователя</string>
    <string name="add_user_add_user">Добавить пользователя</string>
    <string name="users_change_assess"><u>Изменить права доступа</u></string>
    <string name="access">Управление доступом</string>
    <string name="ip_str">Использовать ip</string>
    <string name="lock_user_id">ID пользователя</string>
    <string name="lock_fio">ФИО</string>
    <string name="ver">Lock service V 1.0 (28.09.2019)</string>
    <string name="settings">Настройки</string>
    <string name="aud">Аудитория</string>
    <string name="auth_authorization">Авторизация</string>
    <string name="password">Пароль</string>
    <string name="email">Логин</string>
    <string name="auth_enter">Войти</string>
    <string name="add_access">Добавить доступ</string>
    <string name="add_access_hint_user_id">Введите id пользователя</string>
    <string name="add_access_hint_lock_id">Введите id замка</string>
    <string name="add_access_hint_time">Время</string>
    <string name="add_access_hint_date">Дата</string>
    <string name="add_access_adding_access">Добавление доступа</string>
    <string name="add_access_begin_access">Начало доступа:</string>
    <string name="add_access_end_access">Окончание доступа:</string>
    <string name="add_lock_adding_lock">Добавление замка</string>
    <string name="add_lock_description">Description</string>
    <string name="add_lock_version">Version</string>
    <string name="add_access_add">Добавить</string>
    <string name="add_user_hint_name">Введите имя</string>
    <string name="add_user_hint_surname">Введите фамилию</string>
    <string name="add_user_hint_patronymic">Введите отчество</string>
    <string name="add_user_hint_card_id">Введите id карты</string>
    <string name="add_user_hint_email">Введите email</string>
    <string name="racs">Система контроля удаленного доступа</string>
    <string name="tools_lock1">Замок 1</string>
    <string name="main">Главная</string>
    <string name="users_nsp">ФИО</string>
    <string name="users_pass">ID пропуска</string>
    <string name="users_users">Пользователи</string>
    <string name="users_managering_users">Управление пользователями</string>
    <string name="error_message">Заполните поля!</string>
    <string name="lock">Замок</string>
    <string name="your_text">Выбери дату</string>


    <string-array name="roles">
        <item>Студент</item>
        <item>Сотрудник</item>
    </string-array>

    <string-array name="IPs">
        <item>172.18.198.34</item>
        <item>172.18.198.31</item>
    </string-array>
</resources>
