<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/users_layout">

    <Button
        android:id="@+id/add_user1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_dimen"
        android:layout_marginEnd="@dimen/default_dimen"
        android:layout_marginBottom="@dimen/default_dimen"
        android:background="@color/users_add_user_button_background"
        android:text="@string/add_user_add_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/users_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_dimen"
        android:layout_marginTop="@dimen/default_dimen"
        android:layout_marginEnd="@dimen/default_dimen"
        android:orientation="horizontal"
        android:padding="@dimen/users_users_headers_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/us">


        <TextView
            android:id="@+id/nsp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/users_nsp_margin_end"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/users_nsp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/card_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/users_card_id_margin_end"
            android:layout_weight="0.9"
            android:gravity="center"
            android:text="@string/users_pass"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/del_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/users_empty_image_margin_end"
            android:paddingStart="@dimen/users_empty_image_view_padding_start" />

        <ImageView
            android:id="@+id/im_change_access"
            android:layout_width="@dimen/users_dots_width"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <TextView
        android:id="@+id/us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_dimen"
        android:layout_marginTop="@dimen/default_dimen"
        android:layout_marginEnd="@dimen/default_dimen"
        android:text="@string/users_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/managering_users" />

    <TextView
        android:id="@+id/managering_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_dimen"
        android:layout_marginTop="@dimen/default_dimen"
        android:layout_marginEnd="@dimen/default_dimen"
        android:text="@string/users_managering_users"
        android:textSize="@dimen/users_managering_users_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_dimen"
        android:layout_marginTop="@dimen/default_dimen"
        android:layout_marginEnd="@dimen/default_dimen"
        android:layout_marginBottom="@dimen/default_dimen"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/change_assess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/users_headers"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/user_item" />

    <TextView
        android:id="@+id/change_assess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen"
        android:layout_marginBottom="@dimen/default_dimen"
        android:text="@string/users_change_assess"
        android:textSize="@dimen/users_change_access_text_size"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/add_user1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/users_list" />
</androidx.constraintlayout.widget.ConstraintLayout>