<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activities.LockActivity">

    <ImageView
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_dimen"
        android:layout_marginTop="@dimen/default_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_black" />

    <TextView
        android:id="@+id/lock_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_dimen"
        android:layout_marginTop="@dimen/default_dimen"
        android:layout_marginEnd="@dimen/default_dimen"
        tools:text="@string/tools_lock1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/back2"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_dimen"
        android:layout_marginTop="@dimen/default_dimen"
        android:layout_marginEnd="@dimen/default_dimen"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_tw">

        <TextView
            android:id="@+id/uol_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lock_user_id"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lock_fio"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_of_lock_recycler"
        tools:listitem="@layout/user_of_lock_item"
        android:layout_width="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_dimen"
        android:layout_marginTop="@dimen/default_dimen"
        android:layout_marginEnd="@dimen/default_dimen"
        android:layout_marginBottom="@dimen/default_dimen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />

</androidx.constraintlayout.widget.ConstraintLayout>